# Investing

./: .gitignore  pyproject.toml
data/portfolios/: funda.txt  momentum.txt
src/investing/: __init__.py  utils.py
src/investing/ETFs/: ETF_algo_strategy.ipynb  ETF_algo_strategy_pair_trading.ipynb  ETF_portfolio.ipynb
src/investing/Stocks/: Analysis.ipynb  Analysis_momentum.ipynb  Bootstrapping.ipynb  Stock_analysis.ipynb
