[project]
name = "investing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "yfinance>=0.2.41",
    "skfolio>=0.2.2",
    "ipykernel>=6.29.5",
    "pip>=24.2",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "seaborn>=0.13.2",
    "backtesting>=0.3.3",
    "ta-lib>=0.4.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
